[package]
name = "markhor"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]

[dependencies]
env_logger = "0.4"
diesel = { version = "0.15", features = ["sqlite"] }
diesel_codegen = { version = "0.15", features = ["sqlite"] }
dotenv = "0.10"
log = "0.3"
r2d2 = "0.7"
r2d2-diesel = "0.15"
rocket = "0.3"
rocket_codegen = "0.3"
