[package]
name = "markhor"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.3", features = ["sqlite"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.16.0", features = ["bundled"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.45"

[workspace]
members = [
    "markhor-neon/native"
]
