[package]
name = "markhor-neon"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "markhor_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
