[package]
name = "markhor-neon"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "markhor_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
neon-serde = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
markhor = { path = "../../" }
